[gd_scene load_steps=7 format=3 uid="uid://oifhuobwjqqw"]

[ext_resource type="Texture2D" uid="uid://vauibdh7ehm2" path="res://assets/Tipi.png" id="1_064a1"]
[ext_resource type="Script" uid="uid://db331youfw13c" path="res://Board/TileScenes/BuildingTiles/Tipi/tipi.gd" id="1_sv5ii"]
[ext_resource type="Script" uid="uid://qtew1os2ivfq" path="res://Board/TileScenes/BuildingTiles/Tipi/trade.gd" id="3_obmip"]
[ext_resource type="Texture2D" uid="uid://bs4ul5idkuqjj" path="res://3rd Party/assets/icons/hide.png" id="3_odgih"]
[ext_resource type="Texture2D" uid="uid://brqcn484n7b8t" path="res://3rd Party/assets/icons/deadwood.png" id="4_aw201"]
[ext_resource type="Texture2D" uid="uid://bhbd8loridh8p" path="res://3rd Party/assets/icons/arrowRight.png" id="5_gg2t6"]

[node name="Tipi" type="Node2D" groups=["Trader"]]
script = ExtResource("1_sv5ii")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -204)
texture = ExtResource("1_064a1")

[node name="TipiInterfaceItems" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Trade" type="MarginContainer" parent="TipiInterfaceItems"]
visible = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 50.0
script = ExtResource("3_obmip")
trade_arrow = null
trade_arrow_size = null

[node name="TradeContainer" type="VBoxContainer" parent="TipiInterfaceItems/Trade"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="TipiInterfaceItems/Trade/TradeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer"]
layout_mode = 2

[node name="FromImage" type="TextureRect" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_odgih")
expand_mode = 2

[node name="Label" type="Label" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer/HBoxContainer/FromImage"]
layout_mode = 0
offset_left = 13.0
offset_top = 9.0
offset_right = 53.0
offset_bottom = 32.0
text = "3"

[node name="TextureRect" type="TextureRect" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_gg2t6")

[node name="ToImage" type="TextureRect" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_aw201")
expand_mode = 2

[node name="Label" type="Label" parent="TipiInterfaceItems/Trade/TradeContainer/PanelContainer/HBoxContainer/ToImage"]
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 49.0
offset_bottom = 33.0
text = "5"
